--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,6 +29,10 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file services/config-server/pom.xml
+    - name: Build with Maven
+      run: mvn -B package --file services/discovery/pom.xml
+    - name: Build with Maven
+      run: mvn -B package --file services/customer/pom.xml
 
     # # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     # - name: Update dependency graph
